modify site name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: grea
+site_name: GREA
 site_url: https://compbioclub.github.io/GREA
 theme:
   name: "material"  # Change theme if needed
