--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,62 @@
 site_name: GREA
 site_url: https://compbioclub.github.io/GREA
 theme:
-  name: "material"  # Change theme if needed
+  name: "material"
+  features:
+    - search.suggest
+    - search.highlight
+    - search.share\
+    # - navigation.footer
+  palette: 
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/weather-sunny 
+        name: Switch to dark mode
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      # primary: deep purple
+      toggle:
+        icon: material/weather-night
+        name: Switch to light mode
+
+extra:
+  homepage: https://compbioclub.github.io/GREA/
+  social:
+    - icon: fontawesome/brands/github
+      link: https://compbioclub.github.io/GREA/
+
+copyright: Copyright &copy; 2025 CompBioClub
+
+repo_url: https://github.com/compbioclub/GREA
+repo_name: GREA
+
+plugins:
+  - mknotebooks:
+      encoding: 'utf-8'
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            docstring_style: numpy
+  - search
+
+extra:
+  encoding: 'utf-8'
+
+markdown_extensions:
+- admonition
+- codehilite
+- pymdownx.superfences
 
 nav:
-  - Home: index.md
-  - Installation: installation.md
-  - Usage: usage.md
+  - 🏠 Home: index.md
+  - 📥 Installation: installation.md
+  - 🔧 Usage: usage.md
