--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
           path: .cache 
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs mkdocs-material mknotebooks mkdocstrings mkdocstrings-python
+      - run: pip install mkdocs mkdocs-material mknotebooks mkdocstrings mkdocstrings-python mkdocs-autorefs
       - run: mkdocs gh-deploy --force
