--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,4 +73,6 @@ nav:
   - 📖 Tutorial: 
     - Phenotype-level prerank enrichment for genes: tutorial/gene-pheno_prerank_enrich.ipynb
     - Phenotype-level prerank enrichment for gene interactions: tutorial/interaction-pheno_prerank_enrich.ipynb
+    - Observation-level prerank enrichment for genes: tutorial/gene-obs_prerank_enrich.ipynb
+    - Observation-level prerank enrichment for gene interactions: tutorial/interaction-obs_prerank_enrich.ipynb
   - 📑 Reference: reference.md
