--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,5 @@ dependencies = [
 
 [tool.setuptools]
 packages = ["grea", "grea.db"]
-
-[tool.setuptools.package-data]
-"grea.db" = ["*"]
-
-[tool.setuptools.include-package-data]
+package-data = { "grea.db" = ["*"] }
 include-package-data = true
